tests/ui/typeck/minus-string.stderr
error[E0600]: cannot apply unary operator `-` to type `String`
  --> $DIR/minus-string.rs:6:5
   |
LL |     -"foo".to_string();
   |     ^^^^^^^^^^^^^^^^^^ cannot apply unary operator `-`
   |
note: `String` does not implement `Neg`
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   |
   = note: `String` is defined in another crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0600`.
